--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "imal-h/pdflib",
+    "name": "dzentota/pdflib",
     "description": "Current Release of PDFlib provide you methods to convert PDF to Images as well as Images to PDF.",
     "keywords": [
         "Imal hasaranga",
